# sonic-vision

./: .hgignore  Links.md  ProjectHome.md  README
code/cpp/finder/: CMakeLists.txt  Makefile  finder.c  finder.cpp  finder.h  hand.cpp  hand.h  limb.cpp  limb.h  main.cpp  settings.h  skin.cpp  skin.h  tools.cpp  tools.h  train.cpp
code/cpp/finder/HogFinder/: CMakeLists.txt  HogFinder.h  Makefile  part1.cpp  part2.cpp  part3.cpp
code/cpp/finder/build.mac/: CMakeCache.txt  cmake_install.cmake
code/cpp/finder/build.mac/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  finder_postBuildPhase.makeDebug
code/cpp/finder/build.mac/finder.xcodeproj/: project.pbxproj
code/cpp/finder/hog/: hog.h  part1.cpp  part2.cpp  part3.cpp
code/cpp/finder/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
code/cpp/finder/nbproject/private/: configurations.xml
code/puredata/: fm.pd
code/python/: oscTest.py  run.py
